style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');

* {
  margin: 0;
  padding: 0;
}

:root {
  --primary-color: #e9e9e9;
  --secondary-color: #292929;
  --tertiary-color: #1e2024;
  --supplementary-color: #bcbcbd;
  --side-color: #d2d2d3;
  --alt-color: #666666;
  --main-color: #141618;
}

.light-theme {
  --primary-color: #000;
  --secondary-color: rgba(0, 0, 0, 0.1);
  --tertiary-color: rgba(0, 0, 0, 0.1);
  --supplementary-color: #000;
  --side-color: #000;
  --alt-color: #000;
  --main-color: #fff;
}

body {
  font-family: 'Inter', sans-serif;
  position: relative;
  background-color: var(--main-color);
  color: var(--primary-color);
  overflow-x: hidden;
}

/* base styles */

li {
  list-style-type: none;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
}

.btn {
  height: 56px;
  width: 187px;
  border-radius: 12px;
  box-shadow: 0px 3px 4px rgba(173, 31, 32, 0.08);
  outline: 0;
  border: 0;
}

/* header and navbar */
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 1.5rem;
  margin-top: 24px;
}

/* hamburger */
.hamburger {
  display: none;
}

.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #000;
}

/* basic style for other elements */
.nav-menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-item {
  margin-right: 56px;
}

.nav-link {
  text-decoration: none;
  color: var(--primary-color);
  font-size: 16px;
  font-weight: 500;
  line-height: 32px;
}

.nav-link:hover {
  border-bottom: 3px solid #945a2f;
}

#icon {
  width: 30px;
  cursor: pointer;
}

.container {
  margin: 0 160px;
}

.logo {
  display: flex;
  align-items: center;
  justify-content: space-between;
  cursor: pointer;
}

.logo-img {
  width: 40px;
}

.logo-heading {
  font-size: 16px;
  font-weight: 500;
  line-height: 32px;
}

/* profile */
.profile {
  margin-top: 140px;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.profile-details {
  width: 50%;
}

.profile-details h1 {
  color: var(--supplementary-color);
  font-size: 18px;
  font-weight: 400;
  line-height: 24px;
}

.profile-details p {
  font-size: 48px;
  font-weight: 600;
  line-height: 58px;
  margin-bottom: 48px;
}

.btn-hire {
  padding: 12px 60px;
  background-color: #945a2f;
}

a.btn-hire {
  color: #fefefe;
  text-decoration: none;
  font-size: 18px;
  font-weight: 500;
  line-height: 32px;
}

.profile-background {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 340px;
  width: 340px;
  background: var(--secondary-color);
  border-radius: 50%;
}

.profile-img {
  width: 60%;
}

.socials {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 170px;
}

.social-handles {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  display: none;
}

.social-handles .handle-item {
  margin-top: 5px;
}

/* heading */
.heading {
  margin-top: 100px;
  margin-bottom: 100px;
}

.heading h2 {
  font-size: 40px;
  font-weight: 600;
  line-height: 40px;
}

.underline {
  background-color: #945a2f;
  height: 4px;
  width: 30px;
  border-radius: 1px;
  margin-top: 4px;
}

/* projects */
.project {
  background-color: var(--tertiary-color);
  border-radius: 12px;
  display: flex;
  justify-content: space-between;
  padding: 40px 48px 30px;
  margin-bottom: 56px;  
}

.project-details {
  width: 50%;
}

.project-image {
  width: 40%;
}

.project-image img {
  border-radius: 10px;
}


.project-icon {
  margin-bottom: 16px;
}

.project-details h3 {
  font-size: 32px;
  font-weight: 500;
  line-height: 32px;
  margin-bottom: 12px;
}

.project-details p {
  font-family: Inter;
  font-size: 18px;
  font-weight: 400;
  line-height: 32px;
  margin-bottom: 50px;
}

.project-details a {
  color: var(--alt-color);
  font-size: 18px;
  font-weight: 500;
  line-height: 32px;
  text-decoration: none;
}

.project-details a:hover {
  color: #fefefe;
}

a.btn-projects {
  background-color: var(--tertiary-color);
  color: var(--supplementary-color);
  text-decoration: none;
  padding: 12px 52px;
}

.projects-btn {
  width: 187px;
  margin: 0 auto;
}

/* About */
.about {
  margin-top: 64px;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}

.about-details {
  width: 44%;
}

.about-details p {
  color: var(--primary-color);
  font-size: 18px;
  font-weight: 400;
  line-height: 28px;
}

.about-image {
  background: var(--secondary-color);
  width: 340px;
  height: 340px;
  border-radius: 50%;
}

.about-pic {
  border-radius: 50%;
}

/* Contact */
.contact {
  display: flex;
  justify-content: space-between;
}
.contact-details p {
  display: flex;
  align-items: center;
  margin: 0 0 35px;
  font-size: 18px;
  font-weight: 400;
  line-height: 28px;
}

.contact-details p img {
  margin-right: 15px;
}

.contact-details p a {
  color: var(--primary-color);
}

.contact-form p {
  color: var(--primary-color);
  font-size: 18px;
  font-weight: 400;
  line-height: 28px;
  margin-bottom: 40px;
}

.input-group label {
  display: block;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  margin-bottom: 6px;
}

.input-group textarea,
.input-field {
  background-color: var(--secondary-color);
  border-radius: 12px;
  border: 0;
  color: var(--primary-color);
  font-size: 16px;
  outline: 0;
  padding: 5px 10px;
  width: 497px;
}

.input-field {
  height: 60px;
  margin-bottom: 30px;
}

.input-group textarea {
  height: 160px;
  resize: none;
}

.btn-submit {
  color: #fefefe;
  background-color: #945a2f;
  cursor: pointer;
  font-size: 18px;
  font-weight: 500;
  line-height: 32px;
  padding: 12px 30px;
  margin-top: 60px;
}

hr {
  margin-top: 94px;
  border: 0;
  height: 5px;
  border-top: 0.5px solid var(--alt-color);
}

footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 20px 0;
}

@media (max-width: 1024px) {
  .container {
    width: 95%;
    margin: 0 auto;
  }
  .profile-details {
    width: 60%;
  }
}

@media (max-width: 768px) {
  .nav-menu {
    position: fixed;
    left: -100%;
    top: 5rem;
    flex-direction: column;
    background-color: var(--main-color);
    width: 100%;
    height: 90%;
    border-radius: 10px;
    text-align: center;
    transition: 0.3s;
    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
    z-index: 1;
    opacity: 0.9;
  }

  .nav-menu.active {
    left: 0;
  }

  .nav-item {
    margin: 2.5rem 0;
  }

  .hamburger {
    display: block;
    cursor: pointer;
  }

  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }

  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }

  .profile {
    flex-direction: column-reverse;
  }
  .profile-details p {
    font-size: 40px;
    font-weight: 600;
    line-height: 48px;
    margin-bottom: 48px;
  }
  .about {
    flex-direction: column-reverse;
    align-items: center;
  }
  .profile-details {
    margin-top: 2rem;
    width: 100%;
    text-align: center;
  }
  .about-details {
    margin-top: 2rem;
    width: 100%;
  }

  .contact {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .heading {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .project {
    flex-direction: column-reverse;
  }
  .project-details,
  .project-image {
    width: 100%;
  }
  .project-details {
    margin-top: 2rem;
  }
  .contact-form {
    margin-top: 2rem;
  }
}

@media (max-width: 576px) {
  .input-group textarea,
  .input-field {
    width: 300px;
  }
}

